explaining code base

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,53 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- 
+    Basic Meta Information
+    CUSTOMIZE: Update with your own information to improve SEO
+  -->
   <meta charset="utf-8">
-  <title>MyFirstAngularProject</title>
+  <title>My Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Professional portfolio showcasing my projects, skills, and experience.">
+  <meta name="keywords" content="portfolio, web development, developer, engineer">
+  <meta name="author" content="Your Name">
+  
+  <!-- Favicon - replace with your own in the public directory -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- 
+    Optional: Add Open Graph meta tags for better social media sharing
+    CUSTOMIZE: Update with your own information
+  -->
+  <meta property="og:title" content="My Professional Portfolio">
+  <meta property="og:description" content="Explore my projects, skills, and professional experience.">
+  <meta property="og:image" content="assets/images/profile.jpg">
+  <meta property="og:url" content="https://yourdomain.com">
+  <meta property="og:type" content="website">
+
+  <!-- 
+    Optional: Add Twitter Card meta tags for better Twitter sharing
+    CUSTOMIZE: Update with your own information
+  -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="My Professional Portfolio">
+  <meta name="twitter:description" content="Explore my projects, skills, and professional experience.">
+  <meta name="twitter:image" content="assets/images/profile.jpg">
+  
+  <!-- 
+    Optional: Add Google Fonts or other external resources
+    CUSTOMIZE: Choose fonts that match your design style
+  -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Application Root Element - Do not modify -->
   <app-root></app-root>
+  
+  <!-- 
+    Optional: Add analytics or other scripts before the closing body tag
+    CUSTOMIZE: Add your Google Analytics or other tracking code here
+  -->
 </body>
 </html>
